# azure-quantum-parity-readout

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.TXT  README.md  paths.py  prepare_data.py  pyproject.toml  requirements.txt
.pre-commit-scripts/: clean_md.sh
ParityReadoutSimulator/: Manifest.toml  Project.toml  README.md
ParityReadoutSimulator/examples/: DQD_temperature_reference_data.md  Fig4_parity_readout_signal.md  FigS11_S12_exp_sim_comparison.md  FigS3_charge_noise_trajectories.md  FigS4-quasiMZM.md  FigS8-QD-MZM.md
ParityReadoutSimulator/src/: BathCorrelationFunctions.jl  BathCouplings.jl  Hamiltonians.jl  LindbladOperators.jl  Noise.jl  ParityReadoutSimulator.jl  Plotting.jl  QuantumCapacitance.jl  SpectralFunctions.jl  Sweeps.jl  TimeTraces.jl  Units.jl  exports.jl  plotting.py
cq_conversion/: corrections.py  cq_conversion.py  cq_plot.py  datasets.py  helpers.py  workflow.py
measured_analysis_figures/: figure3_deviceA1_parity_measurements.md  figureS10_deviceB1_parity_measurements.md  figureS11_qd_mzm.md  figureS12_scenarios.md  figureS13_cut_loop.md  figureS14_trivial_measurement.md  figureS16_deviceB_qpp_times.md  figureS17_qpp.md  figureS18_deviceB1_charge_noise.md  figureS19_deviceB_thermometry.md  figureS5_cq_conversion.md  figureS6_dot_tuneup.md  figureS7_tgp2_tuneup.md  figureS9_deviceA2_parity_measurements.md
measured_analysis_figures/analysis_code/: charge_noise.py  common.py  plotting_code.py  (+3 more)
thermometry/: __init__.py  coulomb_diamond.py  curve_sets.py  helpers.py  hough_lines.py  models.py  opt_vectors.py
(+3 files in other folders)
